# clave

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  start.sh
.claude/: launch.json  settings.json
.claude/agents/: AGENTS.md  architect.md  developer.md  qa-automator.md  reviewer.md  security-sentry.md  ui-designer.md
.claude/hooks/: HOOKS.md  post_edit_format.sh  stop_lint.sh
.githooks/: pre-commit
backend/: README.md  pyproject.toml
backend/migrations/: 0001_init.sql  0002_search.sql  0003_artifacts.sql  0004_highlights.sql  0005_knowledge.sql
backend/src/clave/: __init__.py  __main__.py  app.py  config.py  logging_setup.py  models.py  paths.py
backend/src/clave/api/: __init__.py  admin.py  housekeeping.py  knowledge.py  overlay.py  projects.py  search.py  sessions.py
backend/src/clave/overlay/: db.py  migrate.py  repo.py
backend/src/clave/scanner/: aggregator.py  bootstrap.py  housekeeping.py  parser.py
backend/tests/: conftest.py  test_api.py  test_architecture.py  test_artifacts.py  test_highlights.py  test_housekeeping.py  test_knowledge.py  test_parser.py  test_paths.py  test_scanner.py  test_sessions_delete.py
frontend/: .gitignore  README.md  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/scripts/: gen-api-types.sh
frontend/src/: main.tsx
frontend/src/api/: client.ts  mutations.ts  queries.ts  schema.ts
frontend/src/lib/: format.ts
frontend/src/routes/: __root.tsx  artifacts.tsx  housekeeping.tsx  index.tsx  knowledge.tsx  projects.tsx
scripts/: check.sh
(+27 files in other folders)
